# thanhtest-

./: README.md
CLionProjects/face_recognition-thanhkhoeo/: demo.cpp
CLionProjects/face_recognition-thanhkhoeo/src/: face_recognition.h
Desktop/face_recognition-master/: CMakeLists.txt  README.md  demo.cpp
Desktop/face_recognition-master/dependencies/ncnn/install/include/ncnn/: allocator.h  c_api.h  cpu.h  layer.h  layer_type_enum.h  mat.h  net.h  option.h  platform.h  simplestl.h
Desktop/face_recognition-master/dependencies/ncnn/install/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake  ncnnConfig.cmake
Desktop/face_recognition-master/models/: mxnet2ncnn
Desktop/face_recognition-master/src/: aligner.cpp  aligner.h  anchor_generator.cpp  anchor_generator.h  config.cpp  config.h  face_recognition.h  tools.cpp  tools.h
IOT-monitoring-master (3)/IOT-monitoring-master/insert_data/GCP/: main.py
thanhtranning-master/: vector_add.cu
